--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "inlineSourceMap": true
-  }
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
